# scarecrow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  HISTORY.md  PLAN-context-injection.md  PLAN-live-captioner.md  PLAN-notes-pane-rehaul.md  PLAN-whisper-removal.md  README.md  SPEC.md  TODO.md  pyproject.toml  tasks.md  vulture_whitelist.py
benchmarks/: bench_diarization.py  bench_librispeech.py  bench_summarizer.py  gpu_monitor.sh  vad_sweep_2026-04-05.md  vad_tuning_2026-04-05.md  vad_validation_2026-04-09.md
examples/: scarecrow-iterm-profile.json
launchd/: local.scarecrow-weekly-report.plist  scarecrow_weekly_report.sh
prompts/: external-audit.md
scarecrow/: __init__.py  __main__.py  _coreaudio.py  app.py  app.tcss  audio_routing.py  audio_tap.py  config.py  diarizer.py  echo_filter.py  env_health.py  live_captioner.py  recorder.py  runtime.py  session.py  summarizer.py  summary_review.py  sys_audio.py  task_review.py  transcriber.py
scripts/: check_repo_policy.py  cleanup.py  launch.sh  live_caption_prototype.py  repair_venv.py  replay_test.py  report.py  resummarize.py  run_pytest_file.py  run_test_suite.sh  setup.py  sync_env.py  test_apple_speech.py  test_audio_capture.py  test_dual_stream.py  test_live_captioner.py  test_transcription.py  vad_sweep.sh  validate.sh
tests/: conftest.py  helpers.py  test_app.py  test_app_context_menu.py  test_app_infobar.py  test_app_mute_controls.py  test_app_notes.py  test_app_recording.py  test_app_shutdown.py  test_app_sys_audio.py  test_app_sys_vad.py  test_report.py  (+25 more)
(+19 files in other folders)
