[project]
name = "scarecrow"
version = "0.1.0"
description = "Always-recording TUI with live captions and transcription"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "RealtimeSTT",
    "sounddevice",
    "soundfile",
    "numpy",
    "scipy",
    "requests>=2.32.5",
]

[project.scripts]
scarecrow = "scarecrow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scarecrow"]

[tool.ruff]
target-version = "py312"
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["scarecrow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
    "vulture>=2.15",
]
